# game-math

./: .clang-format  .gitignore  .lcovrc  .vimrc  AdalineGD_8h.html  AdalineGD_8h_source.html  AdalineSGD_8h.html  AdalineSGD_8h_source.html  CMakeLists.txt  Classifier_8h.html  Classifier_8h_source.html  DataSet_8h.html  DataSet_8h_source.html  DecisionTree_8h.html  DecisionTree_8h_source.html  Differentiation_8h.html  Differentiation_8h_source.html  Encoder_8h.html  Encoder_8h_source.html  EquationParser_8cpp.html  EquationParser_8h.html  EquationParser_8h_source.html  Equation_8cpp.html  Equation_8h.html  Equation_8h_source.html  ExplicitEuler_8h.html  ExplicitEuler_8h_source.html  Finance_8cpp.html  Finance_8h.html  Finance_8h_source.html  Fractals_8h.html  Fractals_8h_source.html  ImageDataSet_8h.html  ImageDataSet_8h_source.html  Insurance_8cpp.html  Insurance_8h.html  Insurance_8h_source.html  Integration_8h.html  Integration_8h_source.html  KNN_8h.html  (+400 more)
.github/workflows/: build-docs.yml  cmake-debug.yml  cmake-release.yml
benchmarks/: CMakeLists.txt  README.md  main.cpp
docs/: index.md
html/: Classifier_8h_source.html  Perceptron_8h_source.html  annotated.html  classAdalineGD-members.html  classClassifier-members.html  classDataSet-members.html  classDataSet.html  classPerceptron-members.html  classPerceptron.html  classRandom-members.html  classRandom.html  dir_21c15e45c8ad84d04840953418a8e90a.html  dir_857b203def83749b5f8ec0210c7588f8.html  dir_fba38f648377aa56ae5d69782adf9e53.html  ds_8h_source.html  functions.html  functions_func.html  hierarchy.html  index.html  lin__alg_8h_source.html  mat4_8h_source.html  md_include_math_ds_README.html  pages.html  structSet-members.html  structmat2.html  structmat3.html  structmat4-members.html  structmat4.html  structvec2-members.html  structvec2.html  structvec4-members.html  structvec4.html
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_6.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js
include/: vec2.h  vec3.h
include/math/: Matrix.cpp  Matrix.h  Random.h  Tensor.h  ds.h  format.cpp  format.h  math.h  matrix_utils.h  numerics.h  ode.h  sorting.h  utils.h
include/math/ds/: AdalineGD.h  AdalineSGD.h  BaseNNModel.h  Classifier.cpp  Classifier.h  DataSet.h  DecisionTree.h  Evaluation.h  ImageDataSet.h  KNN.h  Layer.h  LogRegSGD.h  MLP.h  MatrixDS.h  Model.h  NCC.h  NN.h  NNModel.cpp  NNModel.h  Neuron.h  Perceptron.h  Predictor.h  README.md  SGD.h  SequentialModel.h  any.h  utils.h
include/math/mat/: mat2.h  mat3.h  mat4.h
latex/: AdalineGD_8h.tex  AdalineGD_8h_source.tex  AdalineSGD_8h.tex  AdalineSGD_8h_source.tex  Classifier_8h.tex  Classifier_8h_source.tex  DataSet_8h.tex  DataSet_8h_source.tex  DecisionTree_8h.tex  DecisionTree_8h_source.tex  Differentiation_8h.tex  Differentiation_8h_source.tex  Encoder_8h.tex  Encoder_8h_source.tex  EquationParser_8cpp.tex  EquationParser_8h.tex  EquationParser_8h_source.tex  Equation_8cpp.tex  Equation_8h.tex  Equation_8h_source.tex  ExplicitEuler_8h.tex  ExplicitEuler_8h_source.tex  Finance_8cpp.tex  Finance_8h.tex  Finance_8h_source.tex  Fractals_8h.tex  Fractals_8h_source.tex  ImageDataSet_8h.tex  ImageDataSet_8h_source.tex  Insurance_8cpp.tex  Insurance_8h.tex  Insurance_8h_source.tex  Integration_8h.tex  Integration_8h_source.tex  KNN_8h.tex  KNN_8h_source.tex  LU_8h.tex  LU_8h_source.tex  LogRegSGD_8h.tex  LogRegSGD_8h_source.tex  (+263 more)
resources/iris_data_files/: README.md  iris.data  script.m
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+110 more)
src/: Matrix.cpp  format.cpp
src/numerics/: utils.cpp
src/statistics/: Insurance.cpp  Probability.cpp
src/symb/: EquationParser.cpp  MathNode.cpp  Operand.cpp  Operator.cpp
tests/: CMakeLists.txt  Test.h  TestFormat.cpp  TestMatrix.cpp  TestSorting.cpp  TestTensor.cpp  TestUtils.cpp  TestVec2.h  main.cpp
tests/ds/: TestAdalineGD.cpp  TestAdalineGD.h  TestAdalineSGD.cpp  TestAdalineSGD.h  TestClassifier.h  TestDSUtils.cpp  TestDecisionTree.cpp  TestKNN.cpp  TestLogRegSGD.cpp  TestLogRegSGD.h  TestMLP.cpp  TestMatrixDS.cpp  TestMatrixDS.h  TestNCC.cpp  TestPerceptron.cpp  TestPerceptron.h  TestSGD.cpp  TestSequentialModel.cpp  TestUtils.h  generate_datasets.py  iris_dataset_test.tsv  iris_dataset_train.tsv  test.tsv
tests/ds/decomposition/: TestPCA.cpp
tests/ds/layers/: TestFlattenLayer.cpp  TestNormalizationLayer.cpp  TestPaddingLayer.cpp  TestRescaleLayer.cpp
tests/ds/preprocessing/: TestScaler.cpp
tests/ds/pyDS/: adalineGD.py  adalineSGD.py  nn.py  perceptron.py
tests/mat/: TestMat2.cpp  TestMat2.h  TestMat3.cpp  TestMat3.h  TestMat4.cpp  TestMat4.h
tests/numerics/: TestFractals.cpp  TestUtils.cpp  TestUtils.h
tests/numerics/analysis/: TestDifferentiation.cpp  TestIntegration.cpp  TestNaturalSpline.cpp  TestSupportValues.cpp
tests/numerics/analysis/symb/: TestSymbolic.cpp
tests/numerics/lin_alg/: TestBackwardSub.cpp  TestBackwardSub.h  TestForwardSub.cpp  TestForwardSub.h  TestGaussSeidel.cpp  TestGaussianElimination.cpp  TestGaussianElimination.h  TestLU.cpp  TestLU.h  TestNewton.cpp  TestQR.cpp  TestSVD.cpp
tests/numerics/ode/: TestExplicitEuler.cpp  TestExplicitEuler.h  TestODE45.cpp  TestODE45.h  TestODEBDF2.cpp  TestODETrapez.cpp
tests/ode/: TestExplicitEuler.h  TestODE45.h
tests/plot/: TestPlot.cpp
tests/statistics/: TestInsurance.cpp  TestProbability.cpp
tests/symb/: TestSymbolic.cpp
tests/vec/: TestVec2.cpp  TestVec2.h  TestVec3.cpp  TestVec3.h  TestVec4.cpp  TestVec4.h
(+84 files in other folders)
